syntax = "proto3";

package product;

option go_package = "../proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    bool requires_prescription = 6;
    string image_url = 7;
}

message CreateProductRequest {
    Product product = 1;
}

message CreateProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    bool requires_prescription = 6;
    string image_url = 7;
}

message UpdateProductRequest {
    string product_id = 1;
    Product product = 2;
}

message UpdateProductResponse {
    string message = 1;
}

message DeleteProductRequest {
    string product_id = 1;
}

message DeleteProductResponse {
    string message = 1;
}

message GetProductRequest {
    string product_id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message ListProductsRequest {
    int32 page = 1;
    int32 limit = 2;
    string sort_by = 3;
    string sort_order = 4;
    string filter = 5;
    string filter_value = 6;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message UpdateStockRequest {
    string product_id = 1;
    int32 quantity_change = 2;
    string reason = 3; // "order_placed", "order_cancelled", "stock_added"
}

message UpdateStockResponse {
    string message = 1;
}
